remove deprecated api usage.